@@ -1,3 +1,12 @@
+2010-06-30  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Darin Adler.
+
+        Buildfix for !ENABLE(SVG_FOREIGN_OBJECT) after r62196.
+        https://bugs.webkit.org/show_bug.cgi?id=41429
+
+        * html/HTMLElementStack.cpp:
+
 2010-06-30  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
